Added example output folder to gitignore

--- a/Example/Strings/de.strings
+++ b/Example/Strings/de.strings
@@ -1,2 +1,2 @@
 "welcome-title" = "Willkommen zu meiner App!";
-"buttont-callout" = "Mit diesem Button kannst du <b>alles</b> machen";
+"button-callout" = "Mit diesem Button kannst du <b>alles</b> machen";
