--- a/Example/Strings/en.strings
+++ b/Example/Strings/en.strings
@@ -1,2 +1,2 @@
 "welcome-title" = "Welcome to my app!";
-"buttont-callout" = "With this button you can do <b>everything!</b>";
+"button-callout" = "With this button you can do <b>everything!</b>";
